modified create_raw_dbases.ipynb file

--- a/create_raw_dbases.ipynb
+++ b/create_raw_dbases.ipynb
@@ -895,7 +895,7 @@
    ],
    "source": [
     "# Writing \"flightdelay_nolatlng.csv\" to table \"delaytable\" into\n",
-    "# \"flightdelay\" database\n",
+    "# \"Flightdelay_data-1\" database.\n",
     "\n",
     "rows_imported = 0\n",
     "for data in pd.read_csv('Resources/flightdelay_nolatlng.csv', chunksize = 500_000):\n",
