--- a/cleandelay_writeto_db.ipynb
+++ b/cleandelay_writeto_db.ipynb
@@ -560,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write delay_clean.csv to table \"clean_delaytable\" in Flightdelay_data-1 database & calculating load times.\n",
+    "# Writegit  delay_clean.csv to table \"clean_delaytable\" in Flightdelay_data-1 database & calculating load times.\n",
     "rows_imported = 0\n",
     "start_time = time.time()\n",
     "for data in pd.read_csv('delay_clean.csv', chunksize=1000000):\n",
