Updated Google Colab Notebook

--- a/ConvertCSVtoLIBSV copy.ipynb
+++ b/ConvertCSVtoLIBSV copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6f4bbb86",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "43f65093",
    "metadata": {},
    "outputs": [],
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c1dfad94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file = \"./Resources/delay_clean.csv\"\n",
-    "output_file = \"./Resources/delay_clean_SVM.txt\"\n",
+    "input_file = \"./Resources/delay_cleanCOPY.csv\"\n",
+    "output_file = \"./Resources/delay_clean_SVMCOPY.txt\"\n",
     "\n",
     "try:\n",
     "\tlabel_index = int( sys.argv[3] )\n",
