--- a/Misc_files/explo_clean_data_2.ipynb
+++ b/Misc_files/explo_clean_data_2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +33,7 @@
    "source": [
     "# WARNING, FILE \"mergefiles.csv\" IS 1.37 GB\n",
     "\n",
-    "delay_data = pd.read_csv(\"./Resources/mergefiles.csv\", encoding = 'utf-8')\n",
+    "delay_data = pd.read_csv(\"../Resources/mergefiles.csv\", encoding = 'utf-8', nrows = 100)\n",
     "delay = pd.DataFrame(delay_data)"
    ]
   },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,6 +306,52 @@
    "source": [
     "delay.drop_duplicates()\n",
     "delay.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MONTH                                                 1\n",
+       "DAY_OF_WEEK                                           7\n",
+       "DEP_DEL15                                             0\n",
+       "DEP_TIME_BLK                                  0700-0759\n",
+       "DISTANCE_GROUP                                        7\n",
+       "SEGMENT_NUMBER                                        1\n",
+       "CONCURRENT_FLIGHTS                                   29\n",
+       "NUMBER_OF_SEATS                                     191\n",
+       "CARRIER_NAME                       Delta Air Lines Inc.\n",
+       "AIRPORT_FLIGHTS_MONTH                             13056\n",
+       "AIRLINE_FLIGHTS_MONTH                             73508\n",
+       "AIRLINE_AIRPORT_FLIGHTS_MONTH                      1174\n",
+       "AVG_MONTHLY_PASS_AIRPORT                        1903352\n",
+       "AVG_MONTHLY_PASS_AIRLINE                       12460183\n",
+       "FLT_ATTENDANTS_PER_PASS                        0.000144\n",
+       "GROUND_SERV_PER_PASS                           0.000149\n",
+       "PLANE_AGE                                             3\n",
+       "DEPARTING_AIRPORT                McCarran International\n",
+       "LATITUDE                                          36.08\n",
+       "LONGITUDE                                      -115.152\n",
+       "PREVIOUS_AIRPORT                                   NONE\n",
+       "PRCP                                                0.0\n",
+       "SNOW                                                0.0\n",
+       "SNWD                                                0.0\n",
+       "TMAX                                               65.0\n",
+       "AWND                                               2.91\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delay.iloc[1,:]"
    ]
   },
   {
