--- a/ConvertCSVtoLIBSV.ipynb
+++ b/ConvertCSVtoLIBSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "6f4bbb86",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "43f65093",
    "metadata": {},
    "outputs": [],
@@ -37,13 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "c1dfad94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file = \"./Resources/delay_clean.csv\"\n",
-    "output_file = \"./Resources/delay_clean_SVM.txt\"\n",
+    "#input_file = \"./Resources/delay_clean.csv\"\n",
+    "#output_file = \"./Resources/delay_clean_SVM.txt\"\n",
+    "\n",
+    "input_file = \"./Resources/for_test.csv\"\n",
+    "output_file = \"./Resources/for_test_SVM.txt\"\n",
     "\n",
     "try:\n",
     "\tlabel_index = int( sys.argv[3] )\n",
