updated all files to my repository

--- a/Misc_files/create_writeto_db.ipynb
+++ b/Misc_files/create_writeto_db.ipynb
@@ -10,6 +10,7 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
     "\n",
     "import re\n",
     "\n",
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "27932bab",
    "metadata": {},
    "outputs": [
@@ -530,13 +531,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 0 to 1000000...Done. 123.9223952293396 total seconds elapsed\n",
-      "importing rows 1000000 to 2000000...Done. 245.80833768844604 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000...Done. 367.31092596054077 total seconds elapsed\n",
-      "importing rows 3000000 to 4000000...Done. 490.0491998195648 total seconds elapsed\n",
-      "importing rows 4000000 to 5000000...Done. 610.7951285839081 total seconds elapsed\n",
-      "importing rows 5000000 to 6000000...Done. 733.0542676448822 total seconds elapsed\n",
-      "importing rows 6000000 to 6489062...Done. 795.7553715705872 total seconds elapsed\n"
+      "importing rows 0 to 1000000...Done. 116.39208269119263 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 234.36231637001038 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 350.8786060810089 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 468.0298249721527 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 584.2465381622314 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 700.0230419635773 total seconds elapsed\n",
+      "importing rows 6000000 to 6489062...Done. 756.3513901233673 total seconds elapsed\n"
      ]
     }
    ],
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c4d76623",
    "metadata": {},
    "outputs": [
@@ -563,13 +564,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 0 to 1000000...Done. 111.41214084625244 total seconds elapsed\n",
-      "importing rows 1000000 to 2000000...Done. 221.43075370788574 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000...Done. 333.37523007392883 total seconds elapsed\n",
-      "importing rows 3000000 to 4000000...Done. 444.39389419555664 total seconds elapsed\n",
-      "importing rows 4000000 to 5000000...Done. 555.0871002674103 total seconds elapsed\n",
-      "importing rows 5000000 to 6000000...Done. 666.9523801803589 total seconds elapsed\n",
-      "importing rows 6000000 to 6489062...Done. 722.0680227279663 total seconds elapsed\n"
+      "importing rows 0 to 1000000...Done. 106.14267349243164 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 212.91079020500183 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 318.4518070220947 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 423.2427649497986 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 527.9949290752411 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 635.1068625450134 total seconds elapsed\n",
+      "importing rows 6000000 to 6489062...Done. 686.8140287399292 total seconds elapsed\n"
      ]
     }
    ],
@@ -588,8 +589,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c4033ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/Flightdelay_data-1\"\n",
+    "engine = create_engine(db_string)\n",
+    "\n",
+    "import_mergefiles = pd.read_sql_table('mergefiles', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "83c6702d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>DAY_OF_WEEK</th>\n",
+       "      <th>DEP_DEL15</th>\n",
+       "      <th>DEP_TIME_BLK</th>\n",
+       "      <th>DISTANCE_GROUP</th>\n",
+       "      <th>SEGMENT_NUMBER</th>\n",
+       "      <th>CONCURRENT_FLIGHTS</th>\n",
+       "      <th>NUMBER_OF_SEATS</th>\n",
+       "      <th>CARRIER_NAME</th>\n",
+       "      <th>AIRPORT_FLIGHTS_MONTH</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PLANE_AGE</th>\n",
+       "      <th>DEPARTING_AIRPORT</th>\n",
+       "      <th>PREVIOUS_AIRPORT</th>\n",
+       "      <th>PRCP</th>\n",
+       "      <th>SNOW</th>\n",
+       "      <th>SNWD</th>\n",
+       "      <th>TMAX</th>\n",
+       "      <th>AWND</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6489057</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1100-1159</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>20118</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stapleton International</td>\n",
+       "      <td>Port Columbus International</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>39.774</td>\n",
+       "      <td>-104.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6489058</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1100-1159</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>20118</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Stapleton International</td>\n",
+       "      <td>Lambert-St. Louis International</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>39.774</td>\n",
+       "      <td>-104.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6489059</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1300-1359</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>58</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>20118</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Stapleton International</td>\n",
+       "      <td>Chicago Midway International</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>39.774</td>\n",
+       "      <td>-104.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6489060</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1100-1159</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>20118</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Stapleton International</td>\n",
+       "      <td>Chicago Midway International</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>39.774</td>\n",
+       "      <td>-104.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6489061</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1100-1159</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>20118</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Stapleton International</td>\n",
+       "      <td>Dallas Love Field</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>39.774</td>\n",
+       "      <td>-104.88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         MONTH  DAY_OF_WEEK  DEP_DEL15 DEP_TIME_BLK  DISTANCE_GROUP  \\\n",
+       "6489057     11            2          0    1100-1159               3   \n",
+       "6489058     11            2          0    1100-1159               4   \n",
+       "6489059     11            2          0    1300-1359               4   \n",
+       "6489060     11            2          0    1100-1159               4   \n",
+       "6489061     11            2          0    1100-1159               4   \n",
+       "\n",
+       "         SEGMENT_NUMBER  CONCURRENT_FLIGHTS  NUMBER_OF_SEATS  \\\n",
+       "6489057               3                  46              175   \n",
+       "6489058               3                  46              175   \n",
+       "6489059               3                  58              175   \n",
+       "6489060               3                  46              143   \n",
+       "6489061               3                  46              143   \n",
+       "\n",
+       "                   CARRIER_NAME  AIRPORT_FLIGHTS_MONTH  ...  PLANE_AGE  \\\n",
+       "6489057  Southwest Airlines Co.                  20118  ...          1   \n",
+       "6489058  Southwest Airlines Co.                  20118  ...          6   \n",
+       "6489059  Southwest Airlines Co.                  20118  ...          4   \n",
+       "6489060  Southwest Airlines Co.                  20118  ...         13   \n",
+       "6489061  Southwest Airlines Co.                  20118  ...         13   \n",
+       "\n",
+       "               DEPARTING_AIRPORT                 PREVIOUS_AIRPORT  PRCP  SNOW  \\\n",
+       "6489057  Stapleton International      Port Columbus International   0.0   0.0   \n",
+       "6489058  Stapleton International  Lambert-St. Louis International   0.0   0.0   \n",
+       "6489059  Stapleton International     Chicago Midway International   0.0   0.0   \n",
+       "6489060  Stapleton International     Chicago Midway International   0.0   0.0   \n",
+       "6489061  Stapleton International                Dallas Love Field   0.0   0.0   \n",
+       "\n",
+       "         SNWD  TMAX  AWND LATITUDE  LONGITUDE  \n",
+       "6489057   0.0  64.0  8.95   39.774    -104.88  \n",
+       "6489058   0.0  64.0  8.95   39.774    -104.88  \n",
+       "6489059   0.0  64.0  8.95   39.774    -104.88  \n",
+       "6489060   0.0  64.0  8.95   39.774    -104.88  \n",
+       "6489061   0.0  64.0  8.95   39.774    -104.88  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import_mergefiles.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c86826",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -597,9 +835,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "mlenv"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -611,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
